# merlin_vla

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
merlin/configs/: base_config.yaml
merlin/data/: data_loader.py  toy_reach_dataset.py
merlin/eval/: eval_reach.py
merlin/merlin/models/: image_encoder.py  merlin_model.py  proprio_encoder.py  text_encoder.py  transformer_backbone.py
merlin/training/: train_merlin.py
merlin_vla.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
