[project]
name = "merlin-vla"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pyyaml>=6.0.3",
    "sentencepiece>=0.2.1",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "tqdm>=4.67.3",
    "transformers>=4.44.0",
    "wandb>=0.24.2",
]

[tool.setuptools]
packages = ["merlin"]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"